crates/strider/tests/snapshots/v2__x64__builtins__clz32.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "7" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="φ unique[0x69600]:4", shape=house, fillcolor="#163030"];
  "10" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="φ unique[0x69600]:4", shape=house, fillcolor="#163030"];
  "5" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "25" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="arg[0] ← EDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
